Documentation: Builder + mkdocs setup

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ markdown = "*"
 
 [dev-packages]
 build = "*"
+mkdocs = "*"
+mkdocstrings = {extras = ["python"], version = "*"}
+mkdocs-literate-nav = "*"
+mkdocs-section-index = "*"
 
 [requires]
 python_version = "3.12"
